// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListPane given a number of lists should render the expected html 1`] = `
<div>
  <div>
    <ol
      class="listPane"
    >
      <li
        class="list"
        id="list-1"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list one
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-2"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list two
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-3"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list three
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
    </ol>
    <div
      class=""
    >
      <button
        aria-label="New List"
        class="p-1 bg-blue-100 border"
        type="button"
      >
        New List
      </button>
    </div>
  </div>
</div>
`;

exports[`ListPane given a number of lists when a list delete button is clicked should render the expected html 1`] = `
<div>
  <div>
    <ol
      class="listPane"
    >
      <li
        class="list"
        id="list-1"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list one
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-2"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list three
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
    </ol>
    <div
      class=""
    >
      <button
        aria-label="New List"
        class="p-1 bg-blue-100 border"
        type="button"
      >
        New List
      </button>
    </div>
  </div>
</div>
`;

exports[`ListPane given a number of lists when a list edit button is clicked and an invalid title stops the edit from being completed should render the expected html 1`] = `
<div>
  <div>
    <ol
      class="listPane"
    >
      <li
        class="list"
        id="list-1"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list one
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-2"
      >
        <span
          class="title"
          data-testid="title"
        >
          <label
            for="list-title"
          >
            List Title
            <input
              class="ring-4 ring-opacity-30 ring-red-300"
              id="list-title"
              placeholder="List Title"
              type="text"
              value=""
            />
          </label>
        </span>
      </li>
      <li
        class="list"
        id="list-3"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list three
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
    </ol>
    <div
      class=""
    >
      <button
        aria-label="New List"
        class="p-1 bg-blue-100 border"
        type="button"
      >
        New List
      </button>
    </div>
  </div>
</div>
`;

exports[`ListPane given a number of lists when a list edit button is clicked and the edit is cancelled should render the expected html 1`] = `
<div>
  <div>
    <ol
      class="listPane"
    >
      <li
        class="list"
        id="list-1"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list one
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-2"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list two
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-3"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list three
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
    </ol>
    <div
      class=""
    >
      <button
        aria-label="New List"
        class="p-1 bg-blue-100 border"
        type="button"
      >
        New List
      </button>
    </div>
  </div>
</div>
`;

exports[`ListPane given a number of lists when a list edit button is clicked and the edit is completed should render the expected html 1`] = `
<div>
  <div>
    <ol
      class="listPane"
    >
      <li
        class="list"
        id="list-1"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list one
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-2"
      >
        <span
          class="title"
          data-testid="title"
        >
          new title for test list two
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-3"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list three
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
    </ol>
    <div
      class=""
    >
      <button
        aria-label="New List"
        class="p-1 bg-blue-100 border"
        type="button"
      >
        New List
      </button>
    </div>
  </div>
</div>
`;

exports[`ListPane given a number of lists when a list edit button is clicked and the new list button is clicked should render the expected html 1`] = `
<div>
  <div>
    <ol
      class="listPane"
    >
      <li
        class="list"
        id="list-1"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list one
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-2"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list two
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-3"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list three
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-4"
      >
        <span
          class="title"
          data-testid="title"
        >
          <label
            for="list-title"
          >
            List Title
            <input
              class="ring-4 ring-opacity-30 ring-green-300"
              id="list-title"
              placeholder="List Title"
              type="text"
              value="New List"
            />
          </label>
        </span>
      </li>
    </ol>
    <div
      class=""
    >
      <button
        aria-label="New List"
        class="p-1 bg-blue-100 border"
        type="button"
      >
        New List
      </button>
    </div>
  </div>
</div>
`;

exports[`ListPane given a number of lists when a list edit button is clicked should render the expected html 1`] = `
<div>
  <div>
    <ol
      class="listPane"
    >
      <li
        class="list"
        id="list-1"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list one
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-2"
      >
        <span
          class="title"
          data-testid="title"
        >
          <label
            for="list-title"
          >
            List Title
            <input
              class="ring-4 ring-opacity-30 ring-green-300"
              id="list-title"
              placeholder="List Title"
              type="text"
              value="test list two"
            />
          </label>
        </span>
      </li>
      <li
        class="list"
        id="list-3"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list three
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
    </ol>
    <div
      class=""
    >
      <button
        aria-label="New List"
        class="p-1 bg-blue-100 border"
        type="button"
      >
        New List
      </button>
    </div>
  </div>
</div>
`;

exports[`ListPane given a number of lists when the new list button is clicked should render the expected html 1`] = `
<div>
  <div>
    <ol
      class="listPane"
    >
      <li
        class="list"
        id="list-1"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list one
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-2"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list two
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-3"
      >
        <span
          class="title"
          data-testid="title"
        >
          test list three
        </span>
        <span
          class="action-btns"
        >
          <button
            class="p-1 border"
            type="button"
          >
            Edit
          </button>
          <button
            class="p-1 border"
            type="button"
          >
            Delete
          </button>
        </span>
      </li>
      <li
        class="list"
        id="list-4"
      >
        <span
          class="title"
          data-testid="title"
        >
          <label
            for="list-title"
          >
            List Title
            <input
              class="ring-4 ring-opacity-30 ring-green-300"
              id="list-title"
              placeholder="List Title"
              type="text"
              value="New List"
            />
          </label>
        </span>
      </li>
    </ol>
    <div
      class=""
    >
      <button
        aria-label="New List"
        class="p-1 bg-blue-100 border"
        type="button"
      >
        New List
      </button>
    </div>
  </div>
</div>
`;

exports[`ListPane initial render should render the expected html 1`] = `
<div>
  <div>
    <ol
      class="listPane"
    />
    <div
      class=""
    >
      <button
        aria-label="New List"
        class="p-1 bg-blue-100 border"
        type="button"
      >
        New List
      </button>
    </div>
  </div>
</div>
`;

exports[`ListPane initial render when the new list button is clicked should render the expected html 1`] = `
<div>
  <div>
    <ol
      class="listPane"
    >
      <li
        class="list"
        id="list-1"
      >
        <span
          class="title"
          data-testid="title"
        >
          <label
            for="list-title"
          >
            List Title
            <input
              class="ring-4 ring-opacity-30 ring-green-300"
              id="list-title"
              placeholder="List Title"
              type="text"
              value="New List"
            />
          </label>
        </span>
      </li>
    </ol>
    <div
      class=""
    >
      <button
        aria-label="New List"
        class="p-1 bg-blue-100 border"
        type="button"
      >
        New List
      </button>
    </div>
  </div>
</div>
`;
